test/syntax/errors/09_missing_function_name.sg
// expect-error: parse error
// A dot must be followed by a function name.
import io

io.("hello")
